// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Flow - simple_user - Introspection Endpoint 1`] = `
{
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "amr": "pwd",
  "client_id": "password-flow-client-id",
  "sub": "simple_user",
  "idp": "local",
  "active": true,
  "scope": "some-app-scope-1"
}
`;

exports[`Password Flow - simple_user - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "scope": [
    "email",
    "openid",
    "profile",
    "some-app-scope-1",
    "some-custom-identity"
  ],
  "amr": [
    "pwd"
  ],
  "client_id": "password-flow-client-id",
  "sub": "simple_user",
  "idp": "local"
}
`;

exports[`Password Flow - simple_user - UserInfo Endpoint 1`] = `
{
  "sub": "simple_user",
}
`;

exports[`Password Flow - user_with_all_claim_types - Introspection Endpoint 1`] = `
{
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "amr": "pwd",
  "client_id": "password-flow-client-id",
  "sub": "user_with_all_claim_types",
  "idp": "local",
  "some-app-user-custom-claim": "Oliver's Custom User Claim",
  "some-app-scope-1-custom-user-claim": "Oliver's Scope Custom User Claim",
  "active": true,
  "scope": "some-app-scope-1"
}
`;

exports[`Password Flow - user_with_all_claim_types - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "scope": [
    "email",
    "openid",
    "profile",
    "some-app-scope-1",
    "some-custom-identity"
  ],
  "amr": [
    "pwd"
  ],
  "client_id": "password-flow-client-id",
  "sub": "user_with_all_claim_types",
  "idp": "local",
  "some-app-user-custom-claim": "Oliver's Custom User Claim",
  "some-app-scope-1-custom-user-claim": "Oliver's Scope Custom User Claim"
}
`;

exports[`Password Flow - user_with_all_claim_types - UserInfo Endpoint 1`] = `
{
  "email": "oliver.hunter@gmail.com",
  "name": "Oliver Hunter",
  "some-custom-identity-user-claim": "Oliver's Custom User Claim",
  "sub": "user_with_all_claim_types",
}
`;

exports[`Password Flow - user_with_custom_api_resource_claims - Introspection Endpoint 1`] = `
{
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "amr": "pwd",
  "client_id": "password-flow-client-id",
  "sub": "user_with_custom_api_resource_claims",
  "idp": "local",
  "some-app-user-custom-claim": "Sam's Custom User Claim",
  "some-app-scope-1-custom-user-claim": "Sam's Scope Custom User Claim",
  "active": true,
  "scope": "some-app-scope-1"
}
`;

exports[`Password Flow - user_with_custom_api_resource_claims - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "scope": [
    "email",
    "openid",
    "profile",
    "some-app-scope-1",
    "some-custom-identity"
  ],
  "amr": [
    "pwd"
  ],
  "client_id": "password-flow-client-id",
  "sub": "user_with_custom_api_resource_claims",
  "idp": "local",
  "some-app-user-custom-claim": "Sam's Custom User Claim",
  "some-app-scope-1-custom-user-claim": "Sam's Scope Custom User Claim"
}
`;

exports[`Password Flow - user_with_custom_api_resource_claims - UserInfo Endpoint 1`] = `
{
  "email": "sam.tailor@gmail.com",
  "name": "Sam Tailor",
  "sub": "user_with_custom_api_resource_claims",
}
`;

exports[`Password Flow - user_with_custom_identity_claims - Introspection Endpoint 1`] = `
{
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "amr": "pwd",
  "client_id": "password-flow-client-id",
  "sub": "user_with_custom_identity_claims",
  "idp": "local",
  "active": true,
  "scope": "some-app-scope-1"
}
`;

exports[`Password Flow - user_with_custom_identity_claims - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "scope": [
    "email",
    "openid",
    "profile",
    "some-app-scope-1",
    "some-custom-identity"
  ],
  "amr": [
    "pwd"
  ],
  "client_id": "password-flow-client-id",
  "sub": "user_with_custom_identity_claims",
  "idp": "local"
}
`;

exports[`Password Flow - user_with_custom_identity_claims - UserInfo Endpoint 1`] = `
{
  "email": "jack.sparrow@gmail.com",
  "name": "Jack Sparrow",
  "some-custom-identity-user-claim": "Jack's Custom User Claim",
  "sub": "user_with_custom_identity_claims",
}
`;

exports[`Password Flow - user_with_standard_claims - Introspection Endpoint 1`] = `
{
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "amr": "pwd",
  "client_id": "password-flow-client-id",
  "sub": "user_with_standard_claims",
  "idp": "local",
  "active": true,
  "scope": "some-app-scope-1"
}
`;

exports[`Password Flow - user_with_standard_claims - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "https://localhost:8443",
  "aud": "some-app",
  "scope": [
    "email",
    "openid",
    "profile",
    "some-app-scope-1",
    "some-custom-identity"
  ],
  "amr": [
    "pwd"
  ],
  "client_id": "password-flow-client-id",
  "sub": "user_with_standard_claims",
  "idp": "local"
}
`;

exports[`Password Flow - user_with_standard_claims - UserInfo Endpoint 1`] = `
{
  "email": "john.smith@gmail.com",
  "email_verified": "true",
  "name": "John Smith",
  "sub": "user_with_standard_claims",
}
`;
